# webcad

./: PROJECT_OVERVIEW.md
kernel/: CMakeLists.txt  Compile.bat  main.cpp  main.h
kernel/Include/: export.h
kernel/Include/private/: acedTrans.h  kernel.h
kernel/Include/private/Ac/: AcDebug.h  AcEmsdkEvent.h  AcEventTrigger.h  AcImpl.h  AcMap.h
kernel/Include/private/Ap/: ApImpl.h  ApWorkDocManager.h  ApWorkDocument.h
kernel/Include/private/App/: Application.h  ApplicationManager.h
kernel/Include/private/Db/: DbDatabaseImpl.h  DbDictionaryRecord.h  DbDwgCopyFiler.h  DbDwgFileFiler.h  DbDwgUndoFiler.h  DbDxfFileFiler.h  DbEntityStake.h  DbHandleManage.h  DbHandleTable.h  DbHandleTableRecord.h  DbImpl.h  DbImpl_orig.h  DbObjectManager.h  DbOsnapPointCompute.h
kernel/Include/private/Ed/: EdAcadController.h  EdController.h  EdControllerManager.h  EdDimJig.h  EdImpl.h  EdKeyboardEvent.h  EdMouseEvent.h  EdPickJig.h  EdRegistryCommand.h  EdRegistryCommandIterator.h  EdRegistryCommandStack.h  EdSelectionSetIndex.h  EdSelectionSetManager.h  EdTouch.h  EdTouchArray.h  EdTouchController.h  EdTouchEvent.h  EdUserInputEvent.h  EdUserInputManager.h  EdWheelEvent.h  EditorReactorManager.h
kernel/Include/private/Emscripten/: AcArrayExport.h  RxExport.h
kernel/Include/private/Ev/: Ev.h  EvDatabaseReactor.h  EvDocManagerReactor.h  EvEventManager.h  EvRendererReactor.h
kernel/Include/public/: CmColor.h  CmColorBase.h  CmEntityColor.h  CmTransparency.h  PlatformSettings.h  acadstrc.h  aced.h  acedads.h  acgidefs.h  acutads.h  acutmem.h  adesk.h  adsdef.h  arxHeaders.h
kernel/src/Ac/: AcBinary.cpp  AcBinaryFiler.cpp  AcDebug.cpp  AcEmsdkEvent.cpp  AcEvent.cpp  AcEventBase.cpp  AcEventTrigger.cpp  AcJsonObject.cpp  AcString.cpp  AcSystem.cpp
kernel/src/Ap/: ApDocManager.cpp  ApDocManagerReactor.cpp  ApDocument.cpp  ApDocumentIterator.cpp  ApWorkDocManager.cpp  ApWorkDocument.cpp
kernel/src/App/: Application.cpp  ApplicationManager.cpp
kernel/src/Db/: Db.cpp  Db2LineAngularDimension.cpp  Db3PointAngularDimension.cpp  DbAbstractViewTableRecord.cpp  DbAlignedDimension.cpp  DbArc.cpp  DbArcDimension.cpp  DbBlockBegin.cpp  DbBlockEnd.cpp  DbBlockReference.cpp  DbBlockReferenceIdIterator.cpp  DbBlockTable.cpp  DbBlockTableIterator.cpp  DbBlockTableRecord.cpp  DbBlockTableRecordIterator.cpp  DbCircle.cpp  DbCurve.cpp  DbDatabase.cpp  DbDatabaseImpl.cpp  DbDatabaseReactor.cpp  DbDiametricDimension.cpp  DbDictionary.cpp  DbDictionaryIterator.cpp  DbDimStyleTable.cpp  DbDimStyleTableIterator.cpp  DbDimStyleTableRecord.cpp  DbDimension.cpp  DbDwgCopyFiler.cpp  DbDwgFileFiler.cpp  DbDwgFiler.cpp  DbDwgUndoFiler.cpp  DbDxfFiler.cpp  DbEllipse.cpp  DbEntity.cpp  DbEntityGroup.cpp  DbEntityReactor.cpp  DbEntityStake.cpp  DbExtents.cpp  DbExtents2d.cpp  DbGripData.cpp  (+62 more)
kernel/src/Ed/: EdAcadController.cpp  EdCommand.cpp  EdCommandReactor.cpp  EdCommandStack.cpp  EdCommandStackReactor.cpp  EdController.cpp  EdControllerManager.cpp  EdDimJig.cpp  EdJig.cpp  EdKeyboardEvent.cpp  EdMouseEvent.cpp  EdPickJig.cpp  EdRegistryCommand.cpp  EdRegistryCommandIterator.cpp  EdRegistryCommandStack.cpp  EdSelectionSetIndex.cpp  EdSelectionSetManager.cpp  EdTouchController.cpp  EdTouchEvent.cpp  EdUserInputManager.cpp  EdWheelEvent.cpp  EditorReactor.cpp  EditorReactorManager.cpp  aced.cpp  acedTrans.cpp  acedads.cpp
kernel/src/Emscripten/: Acad.cpp  ApExport.cpp  CmExport.cpp  DbExport.cpp  EdExport.cpp  EmExport.cpp  GeExport.cpp  GiExport.cpp  ReExport.cpp  RxExport.cpp  kernel.cpp  wcad_ffi_export.cpp
kernel/src/Ev/: EvDatabaseReactor.cpp  EvDocManagerReactor.cpp  EvEventManager.cpp  EvRendererReactor.cpp
kernel/src/Ge/: GeAugPolyline3d.cpp  GeBoundBlock2d.cpp  GeBoundBlock3d.cpp  GeBoundedPlane.cpp  GeCircArc2d.cpp  GeCircArc3d.cpp  GeClipBoundary2d.cpp  GeCompositeCurve2d.cpp  GeCompositeCurve3d.cpp  GeCone.cpp  GeCubicSplineCurve2d.cpp  GeCubicSplineCurve3d.cpp  GeCurve2d.cpp  GeCurve3d.cpp  GeCurveBoundary.cpp  GeCurveCurveInt2d.cpp  GeCurveCurveInt3d.cpp  GeCurveSurfInt.cpp  GeCylinder.cpp  GeEllipArc2d.cpp  GeEllipArc3d.cpp  GeEllipCone.cpp  GeEllipCylinder.cpp  GeEntity2d.cpp  GeEntity3d.cpp  GeExtents2d.cpp  GeExtents3d.cpp  GeExternalBoundedSurface.cpp  GeExternalCurve2d.cpp  GeExternalCurve3d.cpp  GeExternalSurface.cpp  GeGbl.cpp  GeInterval.cpp  GeLibVersion.cpp  GeLine2d.cpp  GeLine3d.cpp  GeLineSeg2d.cpp  GeLineSeg3d.cpp  GeLinearEnt2d.cpp  GeLinearEnt3d.cpp  (+42 more)
kernel/src/Gi/: Gi.cpp  GiCommonDraw.cpp  GiComputeDisplay.cpp  GiComputeExtent.cpp  GiDrawable.cpp  GiEntDraw.cpp  GiEntity.cpp  GiEntityGeometry.cpp  GiEntityGeometryStake.cpp  GiEntityHighlander.cpp  GiEntityIterator.cpp  GiEntityManager.cpp  GiEntityMutex.cpp  GiEntityReactor.cpp  GiEntityTraits.cpp  GiFill.cpp  GiGeometryExtent.cpp  GiGeometryExtentManager.cpp  GiGeometryExtentView.cpp  GiGeometryPool.cpp  GiLineDashedMaterial.cpp  GiLineMaterial.cpp  GiLinePixelDashedMaterial.cpp  GiLineSegment.cpp  GiLineSegmentGeometry.cpp  GiMaterial.cpp  GiMaterialIterator.cpp  GiMaterialManager.cpp  GiMaterialReactor.cpp  GiMesh.cpp  GiMeshMaterial.cpp  GiObject.cpp  GiObjectId.cpp  GiObjectManager.cpp  GiParameter.cpp  GiPointGeometry.cpp  GiPointMaterial.cpp  GiPoints.cpp  GiSubEntityTraits.cpp  GiTextStyle.cpp  (+8 more)
kernel/src/Gs/: GsCoordSystem.cpp  GsCursor.cpp  GsElement.cpp  GsElementManager.cpp
kernel/src/Pr/: PrDXFParser.cpp  PrDXFParser_new.cpp
kernel/src/Re/: ReCamera.cpp  ReOrthogonalCamera.cpp  ReRenderer.cpp  ReRendererManager.cpp  ReRendererReactor.cpp
kernel/src/Rx/: RxAsyncManager.cpp  RxClassManager.cpp  RxConfigurationVariable.cpp  RxConfigurationVariableManager.cpp  RxCopyOnWriteObject.cpp  RxDeclareMembers.cpp  RxEnvironmentVariable.cpp  RxEnvironmentVariableManager.cpp  RxEventReactor.cpp  RxManager.cpp  RxManagerDictionary.cpp  RxObject.cpp  RxObjectImpl.cpp  RxSysRegistryDictionaryIterator.cpp  RxSysRegistryManager.cpp  RxSystemVariable.cpp  RxSystemVariableManager.cpp  RxWorkerThread.cpp  RxWorkerThreadManager.cpp
kernel/src/Ut/: acutads.cpp  acutmem.cpp
kernel/src/kernel/: kernel.cpp
web/: Implement.bat  (+4 more)
(+386 files in other folders)
